--- a/x-pack/plugin/sql/jdbc/build.gradle
+++ b/x-pack/plugin/sql/jdbc/build.gradle
@@ -11,19 +11,7 @@ tasks.named('forbiddenApisMain').configure {
 }
 
 dependencies {
-  api(xpackProject('plugin:sql:sql-client')) {
-    transitive = false
-  }
-  api(xpackProject('plugin:sql:sql-proto')) {
-    transitive = false
-  }
-  api(project(':libs:elasticsearch-x-content')) {
-      transitive = false
-  }
-  // required by x-content
-  runtimeOnly project(':libs:elasticsearch-core')
-  api "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${versions.jackson}"
-  runtimeOnly "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
+  api xpackProject('plugin:sql:sql-client')
   testImplementation project(":test:framework")
   testImplementation(testArtifact(project(xpackModule('core'))))
 }
@@ -40,13 +28,6 @@ tasks.named("shadowJar").configure {
     // Don't relocate the JDBC driver classes themselves as that's (mostly) public API
     exclude 'org.elasticsearch.xpack.sql.jdbc.*'
   }
-}
-
-tasks.named("thirdPartyAudit").configure {
-  ignoreMissingClasses(
-          'com.fasterxml.jackson.databind.ObjectMapper',
-          'com.fasterxml.jackson.databind.cfg.MapperBuilder'
-  )
 }
 
 tasks.named("test").configure {
